user-skel/ansible_collections/ace_box/ace_box/roles/app-easytravel/files/easytravel-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: easytravel
    kubernetes.io/ingress.class: public
  labels:
    app: easytravel
  name: easytravel-angular
spec:
  rules:
  - host: easytravel.mydomain.com
    http:
      paths:
      - backend:
          service:
            name: angular-nginx-service
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
